Reimplemented AudioLibrary caching.